# Celestial-Server-Legacy

./: .gitignore  AI.py  Animation.py  Authenticate.py  CardCodec.py  Dockerfile  FP.py  GameController.py  Main.py  Procfile  README.md  SoundEffect.py  WS.py  WS.spec  cert.pem  nothing.py  p2.py  pyproject.toml  requirements.txt  saved_decks copy.txt  saved_decks.txt
.run/: Run clients + server.run.xml
ai/: AI.py  Heuristic.py  Translator.py  agent.py  model.py
ai/model/: model.pth
deckbuilder/: BuilderController.py  BuilderView.py
internet/: Authenticate.py  MockNetwork.py  Network.py  Server.py  Settings.py  WebSocketServer.py
logic/: Card.py  Catalog.py  ClientModel.py  Effects.py  MockController.py  OldCards.py  OldCatalog.py  Pack.py  Recap.py  ServerController.py  ServerModel.py  Story.py  TutorialController.py
logic/catalog/: Ashes.py  Birds.py  Birth.py  Pet.py  Shadow.py  Stars.py  Tokens.py  Vision.py  Water.py
view/: GameView.py  HUD.py  MulliganView.py  Settings.py  Shared.py
