[tool.poetry]
name = "celestial"
version = "0.1.0"
description = ""
authors = ["Kai"]
readme = "README.md"

[tool.poetry.scripts]
dev = "Celestial.internet.WebSocketServer:main"

[tool.poetry.dependencies]
python = "^3.8"
bottle = "0.12.19"
google = "3.0.0"

[tool.poetry.group.dev.dependencies]
psycopg2 = "2.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"